# piper

./: .env  Cargo.toml  docker-compose.yaml
migrations/: 20230823120612_InitialMigration.down.sql  20230823120612_InitialMigration.up.sql
src/: main.rs
src/database/: mod.rs
src/modules/: mod.rs  user.rs
src/modules/auth/: data.rs  routes.rs
src/modules/product/: data.rs  routes.rs
src/modules/user/: data.rs  mod.rs  routes.rs
src/utils/: error.rs
