[package]
name = "piper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
actix-web = "4.3"
serde = { version = "1.0", features = [ "derive" ] }
env_logger = "0.10"
argon2 = "0.5"
jsonwebtoken = "8.3"
log = "0.4"
